update dependencies, initial table implementation complete

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@lexical/react": "^0.9.1",
+    "@lexical/react": "^0.16.0",
+    "@lexical/table": "^0.16.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "lexical": "^0.9.1",
+    "lexical": "^0.16.0",
     "mdi-material-ui": "^7.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
